--- a/Bullet/projects/vs-2017/Rigid Bodies.vcxproj.filters
+++ b/Bullet/projects/vs-2017/Rigid Bodies.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="..\..\code\World.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\code\Collision.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
